--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fonts.css">
   </head>
-	<body>
+<body>
     <div class="wrapper"> 
 	    <header class="header">
 		    <div class="logo"></div>
 		    <input type="checkbox" id="menu__toggle"/>
-			<label class="menu__btn" for="menu__toggle">
+		    <label class="menu__btn" for="menu__toggle">
 		    	<span></span>
-			</label>
+		    </label>
 		    <nav class="menu">
-			    <a class="menu__item " href="">Start</a>
-			    <a class="menu__item " href="">Services</a>
-			    <a class="menu__item " href="">About</a>
-			    <a class="menu__item " href="">Blog</a>
-			    <a class="menu__item " href="">Contact us</a>
+			<a class="menu__item " href="">Start</a>
+			<a class="menu__item " href="">Services</a>
+			<a class="menu__item " href="">About</a>
+			<a class="menu__item " href="">Blog</a>
+			<a class="menu__item " href="">Contact us</a>
 		    </nav>
-		</header>
+	    </header>
 	    <section class="main">
 	    	<div class="main__text">
-	    		<h1 class="main__title1">Bali</h1>
-	    		<h2 class="main__title2">Indonesia</h2>
+	    		<h1 class="main__title-bali">Bali</h1>
+	    		<h2 class="main__title-indonesia">Indonesia</h2>
 	    		<p class="main__subtitle">Best Bali travel guide with great tips. Bool hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
 	    		<a class="main__button" href="">Book travel</a>
-	   		</div>
-	   		<div class="img">
-	   			<div class="img__01"></div>
-	   			<div class="img__02"></div>
-	   			<div class="img__03"></div>
-	   		</div>
-	   	</section>
+	   	</div>
+	   	<div class="img">
+	   		<div class="img__first"></div>
+	   		<div class="img__second"></div>
+	   		<div class="img__third"></div>
+	   	</div>
+	    </section>
     </div>
-	</body>
+</body>
 </html>
